@@ -1,3 +1,8 @@
+2015-11-25  Ola Jeppsson  <ola@adapteva.com>
+
+	* epiphany.c (epiphany_gie): Add insn_is_idle parameter.
+	* epiphany-sim.h (epiphany_gie): Adjust function prototype.
+
 2015-11-20  Ola Jeppsson  <ola@adapteva.com>
 
 	* dv-epiphany_dma.c (epiphany_dma_hw_event_callback): Add raised
